# nyrobrain

./: .gitignore  .mcp.json  AGENTS.md  README.md  index.html  pyproject.toml
brain/: .kb.json
brain/concept/: dashboard-reading-guide.md
brain/source/: chart_style.py
brain/source/dashboard/: app.py  dashboard_signals.csv  run.py
brain/source/smart_money/: analyzer.py  run.py  smart_money_signals.csv
brain/source/volume_price/: analyzer.py  run.py  vp_signals.csv
brain/source/whale/: analyzer.py  run.py  whale_signals.csv
docs/: dashboard_data.json
docs/adrs/: index.mdx  meta.json  overview.mdx  what-is-adrs.mdx
docs/adrs/alpha/: concept.mdx  meta.json  writing-an-alpha.mdx
docs/adrs/data/: data-processor.mdx  datamap.mdx  index.mdx  meta.json
docs/adrs/guide/: building-a-portfolio.mdx  downloading-data.mdx  writing-an-alpha.mdx
docs/adrs/performance/: index.mdx  meta.json  metrics.mdx
docs/adrs/portfolio/: index.mdx  meta.json
docs/adrs/report/: index.mdx  meta.json
docs/adrs/search/: index.mdx  meta.json
docs/adrs/test/: meta.json  sensitivity.mdx
docs/conventions/: storage-paths.md
docs/datasources/: README.md  amberdata_endpoints.json  cryptoquant_endpoints.json
docs/pipelines/: 1-backforward-73split.md  2-portfolio.md  README.md
oms/: config.example.json  run.py  test_run.py
