[project]
name = "nyrobrain-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adrs>=1.4.1",
    "cybotrade-datasource>=0.1.9",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
