[project]
name = "nyrobrain-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adrs>=1.4.1",
    "cybotrade-datasource>=0.1.9",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "plotly>=6.8.0",
    "polars>=1.39.3",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
